SERVER-112844 Fix dependency analysis for elemMatch (#43284)

GitOrigin-RevId: 820a4576601b863ca314815f3a47da7c3ef03a91